<resources>
    <string name="app_name">TodoApp</string>
    <string name="todo_title_hint">Enter a title for the task.</string>
    <string name="task_title_label">Title</string>
    <string name="task_detail_label">Details</string>
    <string name="task_solved_label">Solved</string>
    <string name="date_picker_title">Select Date</string>
    <string name="date_picker_ok">OK</string>
    <string name="new_task">New Task</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d tasks</string>
    <string name="btn_send_report">Send Task Report</string>
    <string name="btn_select_reporter">Select Reporter</string>
</resources>
