<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_height="88dp"
                android:layout_width="88dp"
                android:background="@color/colorAccent"
                android:src="@android:color/darker_gray"
                android:id="@+id/detail_page_header"
                />
            <ImageButton
                android:layout_height="88dp"
                android:layout_width="88dp"
                android:background="@color/colorPrimary"
                android:id="@+id/detail_page_header_add_btn"
                android:src="@android:drawable/ic_menu_camera"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            >
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/task_title_label"
            android:text="@string/task_title_label"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/task_title_input"
            android:text="@string/todo_title_hint"
            />
        </LinearLayout>
    </LinearLayout>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/task_detail_label"
        android:text="@string/task_detail_label"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/task_new_data_btn"

        />
    <CheckBox
        android:id="@+id/task_solved_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/task_solved_label"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btn_select_reporter"
        android:text="@string/btn_select_reporter"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btn_send_report"
        android:text="@string/btn_send_report"

        />
</LinearLayout>